--- a/frontend/public/css/character.css
+++ b/frontend/public/css/character.css
@@ -197,6 +197,37 @@ path {
   #character-page h3 {
     font-size: 1em;
   }
+
+  svg {
+    width: 70px;
+  }
+}
+
+@media only screen and (max-height: 1000px) {
+  .character-img img {
+    height: 400px;
+    width: auto;
+  }
+
+  #character-page .character-img {
+    height: auto;
+  }
+
+  .hotspot:nth-of-type(1) {
+    top: 400px;
+  }
+
+  .hotspot:nth-of-type(2) {
+    top: 300px;
+  }
+
+  .hotspot:nth-of-type(3) {
+    top: 240px;
+  }
+
+  .hotspot:nth-of-type(4) {
+    top: 500px;
+  }
 }
 
 @media only screen and (max-width: 450px) {
@@ -233,5 +264,50 @@ path {
 
   #character-page h1 {
     text-align: center;
+  }
+
+  .hotspot:nth-of-type(1) {
+    top: 550px;
+  }
+
+  .hotspot:nth-of-type(2) {
+    top: 450px;
+  }
+
+  .hotspot:nth-of-type(3) {
+    top: 400px;
+  }
+
+  .hotspot:nth-of-type(4) {
+    top: 600px;
+  }
+
+  .benefit-dialog {
+    max-width: 180px;
+  }
+}
+
+@media only screen and (max-height: 1000px) and (max-width: 550px) {
+  .character-img img {
+    width: 100%;
+    height: auto;
+  }
+
+  #character-page .character-img {
+    height: auto;
+  }
+}
+
+@media only screen and (max-width: 340px) {
+  svg {
+    width: 50px;
+  }
+
+  .hotspot:nth-of-type(1) {
+    top: 500px;
+  }
+
+  .hotspot:nth-of-type(4) {
+    top: 550px;
   }
 }
