adds missing loading component

--- a/frontend/views/character.ejs
+++ b/frontend/views/character.ejs
@@ -1,4 +1,5 @@
-<%- include('components/header', { header: true }) %>
+<%- include('components/header', { header: true }) %> <%-
+include('components/loading') %>
 
 <!-- For loop to iterate characters -->
 <% characters.forEach(function(character) { %>
