changes link to /recipes rather than go back for consistency with character page

--- a/frontend/views/recipe.ejs
+++ b/frontend/views/recipe.ejs
@@ -37,8 +37,8 @@ include('components/loading') %>
 
     <!-- Back button -->
     <div class="arrow-btn">
-      <a href="javascript:history.back()"
-        ><p>Go Back</p>
+      <a href="/recipes"
+        ><p>All Recipes</p>
         <img
           src="../public/img/this-way-left.png"
           alt="arrow pointing to the left"
