--- a/frontend/views/references.ejs
+++ b/frontend/views/references.ejs
@@ -13,23 +13,18 @@ include('components/loading') %>
   <div class="character-ref">
     <h2>Assets used for Circus Character Images</h2>
     <p>
-      alex_cardo. n.d. ‘Magic Wizard Items Set. Potion Auldron Magic Wand Scroll
-      Book with Spells Broom Flying Chest Cards Multicolored Energy Crystals
-      Witchs Hat Bottles Prepared Liquid Ball Predictions. Cartoon Vector. Stock
+      alex_cardo. n.d. ‘Magic Wizard Items Set. Cartoon Vector. Stock
       Vector’. Adobe Stock. Accessed 29 January 2023.
       https://stock.adobe.com/au/images/magic-wizard-items-set-potion-auldron-magic-wand-scroll-book-with-spells-broom-flying-chest-cards-multicolored-energy-crystals-witchs-hat-bottles-prepared-liquid-ball-predictions-cartoon-vector/361014647.
     </p>
     <p>
       ann131313.a. n.d. ‘Black Hair Beautiful Hairstyle Black Hair Woman Set.
-      Modern Fashion for Assortment. Long Hair, Short Hair, Fringe. Curly Hair
-      Salon Hairstyles and Trendy Haircut Vector Icon Set Isolated Stock
+      Vector Icon Set Isolated Stock
       Vector’. Adobe Stock. Accessed 29 January 2023a.
       https://stock.adobe.com/au/images/black-hair-beautiful-hairstyle-black-hair-woman-set-modern-fashion-for-assortment-long-hair-short-hair-fringe-curly-hair-salon-hairstyles-and-trendy-haircut-vector-icon-set-isolated/165244659.
     </p>
     <p>
-      ann131313.a. n.d. ‘Boy Hair Rear View Set. Head of a Little Boy. Cute
-      Hairstyle.Variety Child Modern Fashion for Assortment. Long , Short ,
-      Curly Hair. Salon Hairstyles Trendy Haircut of Male. Vector Icon Isolated.
+      ann131313.a. n.d. ‘Boy Hair Rear View Set. Vector Icon Isolated.
       Stock Vector’. Adobe Stock. Accessed 29 January 2023b.
       https://stock.adobe.com/au/images/boy-hair-rear-view-set-head-of-a-little-boy-cute-hairstyle-variety-child-modern-fashion-for-assortment-long-short-curly-hair-salon-hairstyles-trendy-haircut-of-male-vector-icon-isolated/201818002.
     </p>
@@ -68,36 +63,25 @@ include('components/loading') %>
       https://stock.adobe.com/au/images/set-of-clowns-in-different-poses-funny-characters-in-cartoon-style-isolated-on-white-background/333203288.
     </p>
     <p>
-      Tartila. n.d. ‘Superhero Man Characters. Cartoon Muscular Hero Character
-      in Colorful Super Costume with Waving Cloak. Flying Superheroes Vector Set
-      Stock Vector’. Adobe Stock. Accessed 29 January 2023.
+      Tartila. n.d. ‘Superhero Man Characters’. Adobe Stock. Accessed 29 January 2023.
       https://stock.adobe.com/au/images/superhero-man-characters-cartoon-muscular-hero-character-in-colorful-super-costume-with-waving-cloak-flying-superheroes-vector-set/213494367.
     </p>
     <p>
-      topvectors. n.d. ‘Pretty Young Woman Constructor in Flat Style. Parts of
-      Body Legs and Arms , Face Emotions, Haircuts and Hands Gestures. Vector
-      Cartoon Girl Character Stock Vector’. Adobe Stock. Accessed 29 January
+      topvectors. n.d. ‘Vector Cartoon Girl Character Stock Vector’. Adobe Stock. Accessed 29 January
       2023.
       https://stock.adobe.com/au/images/pretty-young-woman-constructor-in-flat-style-parts-of-body-legs-and-arms-face-emotions-haircuts-and-hands-gestures-vector-cartoon-girl-character/183484490.
     </p>
     <p>
-      Vector Tradition. n.d. ‘Circus Cartoon Characters Vector Performers, Top
-      Tent Artists Clown, Acrobat and Man Cannon Ball. Trained Dogs, Juggler,
-      Magician or Trapeze Girl, Woman with Snake, Balancer and Tamer with
-      Gymnast Set Stock Vector’. Adobe Stock. Accessed 29 January 2023.
+      Vector Tradition. n.d. ‘Circus Cartoon Characters Vector Performers’. Adobe Stock. Accessed 29 January 2023.
       https://stock.adobe.com/au/images/circus-cartoon-characters-vector-performers-top-tent-artists-clown-acrobat-and-man-cannon-ball-trained-dogs-juggler-magician-or-trapeze-girl-woman-with-snake-balancer-and-tamer-with-gymnast-set/414010057.
     </p>
     <p>
-      VectorBum. n.d. ‘Cartoon Circus Artists. Entertainment Workers. Trained
-      Animals. Jugglers and Jesters Amusement Show. People Juggling or Making
-      Tricks. Magician and Clown Performance. Splendid Vector Set Stock Vector’.
+      VectorBum. n.d. ‘Cartoon Circus Artists. Splendid Vector Set Stock Vector’.
       Adobe Stock. Accessed 29 January 2023.
       https://stock.adobe.com/au/images/cartoon-circus-artists-entertainment-workers-trained-animals-jugglers-and-jesters-amusement-show-people-juggling-or-making-tricks-magician-and-clown-performance-splendid-vector-set/536796774.
     </p>
     <p>
-      WinWin. n.d. ‘Hand Draw Fruits and Vegetables. Doodle Organic Vegan
-      Tomato, Eggplant Vegetable, Tasty Fruits and Berries. Natural Veggies and
-      Fruits. Healthy Food Isolated Vector Illustration Icons Set Stock Vector’.
+      WinWin. n.d. ‘Hand Draw Fruits and Vegetables Healthy Food Isolated Vector Illustration Icons Set Stock Vector’.
       Adobe Stock. Accessed 29 January 2023.
       https://stock.adobe.com/au/images/hand-draw-fruits-and-vegetables-doodle-organic-vegan-tomato-eggplant-vegetable-tasty-fruits-and-berries-natural-veggies-and-fruits-healthy-food-isolated-vector-illustration-icons-set/315322357.
     </p>
@@ -106,8 +90,7 @@ include('components/loading') %>
   <div class="recipe-refs">
     <h2>Assets used for Recipe Images</h2>
     <p>
-      Bro Vector. n.d. ‘Summer Popsicle. Tropical Cocktail, Flamingo, Hawaiian
-      Flower, Fruits, Ice Cream, Watermelon Isolated on White. Vector
+      Bro Vector. n.d. ‘Summer Popsicle. Watermelon Isolated on White. Vector
       Illustration Stock Vector’. Adobe Stock. Accessed 6 February 2023.
       https://stock.adobe.com/au/images/summer-popsicle-tropical-cocktail-flamingo-hawaiian-flower-fruits-ice-cream-watermelon-isolated-on-white-vector-illustration/534725388.
     </p>
@@ -143,10 +126,7 @@ include('components/loading') %>
       https://stock.adobe.com/au/images/guacamole-in-the-bowl-with-avocado-and-nachos-food-vector-illustration-in-flat-style/554090102.
     </p>
     <p>
-      Vector Tradition. n.d. ‘Italian Cuisine Menu Vector Chicken Salad with
-      Pasta and Vegetables, Omelette Frittata, Pasta Salad with Cream Sauce,
-      Amaretti Cookies. Cheese Pie Crosstata, Creamy Polenta and Tuna Salad
-      Italy Meals Stock Vector’. Adobe Stock. Accessed 6 February 2023.
+      Vector Tradition. n.d. ‘Omelette Frittata’. Adobe Stock. Accessed 6 February 2023.
       https://stock.adobe.com/au/images/italian-cuisine-menu-vector-chicken-salad-with-pasta-and-vegetables-omelette-frittata-pasta-salad-with-cream-sauce-amaretti-cookies-cheese-pie-crosstata-creamy-polenta-and-tuna-salad-italy-meals/560507139.
     </p>
   </div>
@@ -159,9 +139,7 @@ include('components/loading') %>
       https://stock.adobe.com/au/images/watermelon-vector-pack-illustration/356848424.
     </p>
     <p>
-      Ansty art. n.d. ‘Cartoon Egg Isolated on White Background. Set of Fried,
-      Boiled, Half, Sliced Eggs. Vector Illustration. Eggs in Various Forms.
-      Stock Vector’. Adobe Stock. Accessed 29 January 2023.
+      Ansty art. n.d. ‘Cartoon Egg Isolated on White Background. Stock Vector’. Adobe Stock. Accessed 29 January 2023.
       https://stock.adobe.com/au/images/cartoon-egg-isolated-on-white-background-set-of-fried-boiled-half-sliced-eggs-vector-illustration-eggs-in-various-forms/106864245.
     </p>
     <p>
@@ -196,9 +174,7 @@ include('components/loading') %>
       https://stock.adobe.com/au/images/avocado-pieces-set-isolated-on-white-background-design-element-organic-food-vector/110383511.
     </p>
     <p>
-      Yuliia. n.d. ‘Whole and Piece of Broccoli Isolated on White Background.
-      Vegan Food Vector Vegetable Icons in a Trendy Cartoon Style. Healthy Food
-      Concept. Stock Vector’. Adobe Stock. Accessed 29 January 2023.
+      Yuliia. n.d. ‘Whole and Piece of Broccoli Isolated on White Background. Stock Vector’. Adobe Stock. Accessed 29 January 2023.
       https://stock.adobe.com/au/images/whole-and-piece-of-broccoli-isolated-on-white-background-vegan-food-vector-vegetable-icons-in-a-trendy-cartoon-style-healthy-food-concept/420242181.
     </p>
   </div>
@@ -210,9 +186,7 @@ include('components/loading') %>
       https://stock.adobe.com/au/images/fresh-fruit-initial-letter-f-logo-design/514108261.
     </p>
     <p>
-      Alexander. n.d. ‘Green Check Mark Icon. Check Mark Vector Icon. Checkmark
-      Illustration. Vector Symbols Set ,Green Checkmark Isolated on White
-      Background. Correct Vote Choise Isolated Symbol. Stock Vector’. Adobe
+      Alexander. n.d. ‘Green Check Mark Icon. Stock Vector’. Adobe
       Stock. Accessed 6 February 2023.
       https://stock.adobe.com/au/images/green-check-mark-icon-check-mark-vector-icon-checkmark-illustration-vector-symbols-set-green-checkmark-isolated-on-white-background-correct-vote-choise-isolated-symbol/521883763.
     </p>
@@ -247,10 +221,7 @@ include('components/loading') %>
       https://stock.adobe.com/au/images/cute-cartoon-berries-set/330516138.
     </p>
     <p>
-      Vector Tradition. n.d. ‘Circus Carnival Signs and Signboards, Fair Show
-      Welcome Banners, Vector Direction Pointers. Circus Funfair Carnival Ticket
-      Booth Poster with Finger Arrow Signboard to Lions or Tigers Magic Show
-      Stock Vector’. Adobe Stock. Accessed 10 February 2023.
+      Vector Tradition. n.d. ‘Circus Carnival Signs and Signboards. Stock Vector’. Adobe Stock. Accessed 10 February 2023.
       https://stock.adobe.com/au/images/circus-carnival-signs-and-signboards-fair-show-welcome-banners-vector-direction-pointers-circus-funfair-carnival-ticket-booth-poster-with-finger-arrow-signboard-to-lions-or-tigers-magic-show/525216337.
     </p>
   </div>
@@ -267,29 +238,43 @@ include('components/loading') %>
       https://stock.adobe.com/au/images/strong-ghost-working-out-with-some-weights/290861597.
     </p>
     <p>
-      Oleksandra. n.d. ‘Castle Dungeon Interior Seamless Background, Stone Arch
-      Wall, Vector Game Medieval Night Corridor. Ancient Scary Halloween
-      Underground Prison, Spiderweb, Column, Torch. Castle Interior Cartoon
-      Design Stock Vector’. Adobe Stock. Accessed 10 February 2023.
+      Oleksandra. n.d. ‘Castle Interior Cartoon Design Stock Vector’. Adobe Stock. Accessed 10 February 2023.
       https://stock.adobe.com/au/images/castle-dungeon-interior-seamless-background-stone-arch-wall-vector-game-medieval-night-corridor-ancient-scary-halloween-underground-prison-spiderweb-column-torch-castle-interior-cartoon-design/528757890.
     </p>
     <p>
-      Vector Tradition. n.d. ‘Attic Interior, Cartoon Loft, Garret and Cockloft
-      Room. House Attic or Mansard Room with Window, Wood Roof and Floor with
-      Spider Web, Dirty Cardboard Boxes, Old Sofa and Lamps Stock Vector’. Adobe
-      Stock. Accessed 10 February 2023.
+      Vector Tradition. n.d. ‘Attic Interior’. AdobeStock. Accessed 10 February 2023.
       https://stock.adobe.com/au/images/attic-interior-cartoon-loft-garret-and-cockloft-room-house-attic-or-mansard-room-with-window-wood-roof-and-floor-with-spider-web-dirty-cardboard-boxes-old-sofa-and-lamps/473446767.
     </p>
     <p>
-      vectorpouch. n.d. ‘Circus Arena, Classic Round Stage under Marquee Dome
-      with Seats, Garlands and Spotlights. Empty Carnival Ring Tent in Amusement
-      Family Theme Park, Entertainment Performance Cartoon Vector Illustration
-      Stock Vector’. Adobe Stock. Accessed 10 February 2023.
+      vectorpouch. n.d. ‘Circus Arena, Cartoon Vector Illustration Stock Vector’. Adobe Stock. Accessed 10 February 2023.
       https://stock.adobe.com/au/images/circus-arena-classic-round-stage-under-marquee-dome-with-seats-garlands-and-spotlights-empty-carnival-ring-tent-in-amusement-family-theme-park-entertainment-performance-cartoon-vector-illustration/309351907.
     </p>
   </div>
   <div class="quiz-ref">
     <h2>Assets used on the quiz page</h2>
+  </div>
+  <div class="recipe-ref">
+    <h2>Recipes and Nutrition Data</h2>
+    <p>Australian Eggs. “The Health Benefits of Eggs.” Australian Eggs. 2022.
+       https://www.australianeggs.org.au/nutrition/health-benefits</p><p></p>
+    <p>Eats Amazing. “Easy Child-Friendly Guacamole Recipe.” Eats Amazing. 2018. 
+      https://www.eatsamazing.co.uk/family-friendly-recipes/side-dish-recipes/easy-child-friendly-guacamole-recipe</p>
+    <p>Food Yourself. “Tofu 101: The Health Benefits of Tofu - and How to Cook It.” Food Yourself. 2019. 
+      https://www.foodyourself.com/blog/2019/1/15/tofu-101-the-health-benefits-of-tofu-and-how-to-cook-it</p>
+    <p>Healthline. “11 Health and Nutrition Benefits of Cocoa Powder.” Healthline. 2022. 
+      https://www.healthline.com/nutrition/cocoa-powder-nutrition-benefits</p>
+    <p>Healthline. “Watermelon 101: Nutrition Facts and Health Benefits.” Healthline. 2022. 
+      https://www.healthline.com/nutrition/foods/watermelon</p>
+    <p>Kidspot. “Kale and Fetta Frittata.” Kidspot. 2022. 
+      https://www.kidspot.com.au/kitchen/recipes/chorizo-kale-feta-frittata-recipe/636utxxz</p>
+    <p>Jenkinson, L. “Easy Keto Chocolate Waffles.” Ditch the Carbs. 2022. 
+      https://www.ditchthecarbs.com/keto-chocolate-waffles/</p>
+    <p>Jenn. “Kiwi Watermelon Popsicles.” Princess Pinky Girl. 2021. 
+      https://princesspinkygirl.com/kiwi-watermelon-popsicles/</p>
+    <p>My Kids Lick the Bowl. “Easy Tofu Tacos.” My Kids Lick the Bowl. 2021. 
+      https://mykidslickthebowl.com/tofu-tacos/</p>
+    <p>Travers, C. “6 Health Benefits of Avocados.” Mgbfood. 2022. 
+      https://www.mindbodygreen.com/articles/avocado-benefits</p>
   </div>
 </div>
 <%- include('components/footer') %>
