updates reference list

--- a/frontend/views/references.ejs
+++ b/frontend/views/references.ejs
@@ -93,6 +93,16 @@ include('components/loading') %>
   <div class="recipe-refs">
     <h2>Assets used for Recipe Images</h2>
     <p>
+      Aelina. n.d. ‘Ice Cream Constructor. Stock Vector’. Adobe Stock. Accessed
+      20 February 2023.
+      https://stock.adobe.com/au/images/ice-cream-constructor-different-colorful-scoops-and-waffle-cone-for-create-your-own-set-of-various-flavors-vanilla-strawberry-chocolate-tasty-summer-dessert-vector-illustration/433418574.
+    </p>
+    <p>
+      annetdebar. n.d. ‘Ingredients Burger Designer. Stock Vector’. Adobe Stock.
+      Accessed 20 February 2023.
+      https://stock.adobe.com/au/images/ingredients-burger-designer-constructor-of-food-and-meat-and-vegetables-and-cheese-and-fish/229433842.
+    </p>
+    <p>
       Bro Vector. n.d. ‘Summer Popsicle. Watermelon Isolated on White. Vector
       Illustration Stock Vector’. Adobe Stock. Accessed 6 February 2023.
       https://stock.adobe.com/au/images/summer-popsicle-tropical-cocktail-flamingo-hawaiian-flower-fruits-ice-cream-watermelon-isolated-on-white-vector-illustration/534725388.
@@ -100,6 +110,26 @@ include('components/loading') %>
     <p>
       E. n.d. ‘Dinner Ware Stock Vector’. Adobe Stock. Accessed 29 January 2023.
       https://stock.adobe.com/au/images/dinner-ware/81645911.
+    </p>
+    <p>
+      Happypictures. n.d. ‘Tasty Egg Dish with Scrambled, Boiled and Omelette.
+      Stock Vector’. Adobe Stock. Accessed 20 February 2023.
+      https://stock.adobe.com/au/images/tasty-egg-dish-with-scrambled-boiled-and-omelette-served-on-plate-big-vector-set/532890308.
+    </p>
+    <p>
+      Lina_vector. n.d. ‘Set of Chia Pudding. Stock Vector’. Adobe Stock.
+      Accessed 20 February 2023.
+      https://stock.adobe.com/au/images/set-of-chia-pudding-layered-with-aplles-overnight-oats-cherry-mango-strawberry-blueberry-kiwi-tiramisu-dragon-fruit-matcha-in-glass-jar-isolated-delicious-dessert-healthy-usefull-breakfast/483667981.
+    </p>
+    <p>
+      Maneerat. n.d. ‘Stinky Tofu. Stock Vector’. Adobe Stock. Accessed 20
+      February 2023.
+      https://stock.adobe.com/au/images/stinky-tofu-the-chinese-form-of-fermented-tofu-that-has-a-strong-odor-in-a-dish-isolated-close-up-asian-food-vector-illustration-on-white-background/425997691.
+    </p>
+    <p>
+      Oleg. n.d. ‘Sandwich with Salmon Stock Vector’. Adobe Stock. Accessed 20
+      February 2023.
+      https://stock.adobe.com/au/images/sandwich-with-salmon/153804454.
     </p>
     <p>
       oncombuntung. n.d. ‘Frittata Illustration Stock Vector’. Adobe Stock.
@@ -202,6 +232,11 @@ include('components/loading') %>
       https://www.clipartmax.com/middle/m2i8G6K9d3Z5G6b1_pin-png-notice-board-pins-png/.
     </p>
     <p>
+      deemka studio. n.d. ‘Supermarket Fruit Logo Stock Vector’. Adobe Stock.
+      Accessed 20 February 2023.
+      https://stock.adobe.com/au/images/supermarket-fruit-logo-template-design-vector/336361761.
+    </p>
+    <p>
       Dutko, Liudmila. n.d. ‘Confused Person Surrounded by Question Marks Stock
       Vector’. Adobe Stock. Accessed 6 February 2023.
       https://stock.adobe.com/au/images/confused-person-surrounded-by-question-marks/458630388.
@@ -216,6 +251,7 @@ include('components/loading') %>
       Illustration Design Stock Vector’. Adobe Stock. Accessed 29 January 2023.
       https://stock.adobe.com/au/images/fairytale-magic-wand-fantastic-isolated-icon-vector-illustration-design/296332948.
     </p>
+
     <p>
       Nick. n.d. ‘Hand of Mickey Mouse, Finger Hand of Mickey, Hand of Mickey
       Set in Colors Eps10 Stock Vector’. Adobe Stock. Accessed 6 February 2023.
@@ -262,6 +298,56 @@ include('components/loading') %>
   </div>
   <div class="quiz-ref">
     <h2>Assets used on the quiz page</h2>
+    <p>
+      anuwat. n.d. ‘Passenger Plane Flying in the Sky Side View. Travel Concept
+      Stock Vector’. Adobe Stock. Accessed 20 February 2023a.
+      https://stock.adobe.com/au/images/passenger-plane-flying-in-the-sky-side-view-travel-concept/518462985.
+    </p>
+    <p>
+      anuwat. n.d. ‘Vector Cartoon Astronaut with a Spaceship. Stock Vector’.
+      Adobe Stock. Accessed 20 February 2023b.
+      https://stock.adobe.com/au/images/vector-cartoon-astronaut-with-a-spaceship-on-a-sparkling-starry-space-background/328302439.
+    </p>
+    <p>
+      artinspiring. n.d. ‘Movie Making and Showbusiness Occupation Set. Stock
+      Vector’. Adobe Stock. Accessed 20 February 2023.
+      https://stock.adobe.com/au/images/movie-making-and-showbusiness-occupation-set-screenwriter-producer/456710065.
+    </p>
+    <p>
+      blueringmedia. n.d. ‘Different Objects from the Circus Stock Vector’.
+      Adobe Stock. Accessed 20 February 2023.
+      https://stock.adobe.com/au/images/different-objects-from-the-circus/100639457.
+    </p>
+    <p>
+      djvstock. n.d. ‘Hands Fortune Teller and Crystal Ball Stock Vector’. Adobe
+      Stock. Accessed 20 February 2023.
+      https://stock.adobe.com/au/images/hands-fortune-teller-and-crystal-ball/496147847.
+    </p>
+    <p>
+      hanohiki. n.d. ‘World Illustration - Planet Earth Stock Vector’. Adobe
+      Stock. Accessed 20 February 2023.
+      https://stock.adobe.com/au/images/world-illustration-planet-earth-vector-graphic/123560753.
+    </p>
+    <p>
+      Olesia_g. n.d. ‘Different Shape Cartoon White Clouds on Blue Background.
+      Stock Vector’. Adobe Stock. Accessed 20 February 2023.
+      https://stock.adobe.com/au/images/different-shape-cartoon-white-clouds-on-blue-background-vector-decoration-element/250197627.
+    </p>
+    <p>
+      SpicyTruffel. n.d. ‘Flat Ships. Ocean Transportation Types. Stock Vector’.
+      Adobe Stock. Accessed 20 February 2023.
+      https://stock.adobe.com/au/images/flat-ships-sailing-yachts-marine-sailboats-and-motor-ships-ocean-transportation-types-vector-illustrations-catamaran-and-powerboat-boat-with-sail-tugboat-yacht-set-for-travel-and-work/305150651.
+    </p>
+    <p>
+      TeraVector. n.d. ‘Modern or Classic Artist Drawings Exhibition in Art
+      Museum. Stock Vector’. Adobe Stock. Accessed 20 February 2023.
+      https://stock.adobe.com/au/images/modern-or-classic-artist-drawings-exhibition-in-art-museum-concept-man-and-women-looking-on-landscape-portrait-still-life-drawings-on-wall-people-visiting-museum-trendy-flat-vector-illustration/341892603.
+    </p>
+    <p>
+      topvectors. n.d. ‘Museum Visitors Viewing Museum Exhibit Stock Vector’.
+      Adobe Stock. Accessed 20 February 2023.
+      https://stock.adobe.com/au/images/museum-visitors-looking-at-the-painting-hanging-on-gallery-wall-people-viewing-museum-exhibit/189626269.
+    </p>
   </div>
   <div class="recipe-ref">
     <h2>Recipes and Nutrition Data</h2>
