fixes small issues here and there

--- a/frontend/views/quiz.ejs
+++ b/frontend/views/quiz.ejs
@@ -8,7 +8,7 @@ include('components/loading') %> <%- include('components/loading') %>
         <h2>Welcome Amazing guest!</h2>
         <p>
           Take our quiz to discover which circus character you most resemble,
-          and uncover the secret to their superpowers - their favorite
+          and uncover the secret to their superpowers – their favorite
           superfood!
         </p>
         <div class="primary-btn btn">
