--- a/frontend/views/components/footer.ejs
+++ b/frontend/views/components/footer.ejs
@@ -1,7 +1,13 @@
 <footer>
     <p>&copy;2022 The Red Team. </p>
-    <p><a href="/references">Click here to view the reference list</a></p>
-    <p><a href="https://github.com/s3778046/vita-fun">Visit our Project's github repository</a></p>
+    <p>
+        <a href="/references">Click here to view the reference list</a>
+    </p>
+    <p>
+        <a href="https://github.com/s3778046/vita-fun"  target="_blank"
+            rel="noopener noreferrer">Visit our Project's github repository
+        </a>
+    </p>
 </footer>
 <div id="sparkles"></div>
 
