fixes issue of safari not applying filter

--- a/frontend/public/css/base.css
+++ b/frontend/public/css/base.css
@@ -213,6 +213,7 @@ nav {
   background-color: rgba(255, 255, 255, 0.1);
   transition: background-color 0.5s ease;
   backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   box-shadow: var(--base-box-shadow);
   position: fixed;
   top: 0;
