fixes responsivity issues with quiz loading-anim

--- a/frontend/public/css/quiz.css
+++ b/frontend/public/css/quiz.css
@@ -119,10 +119,8 @@ progress[value]::-webkit-progress-value {
 
 /* quiz question loading animation styles */
 .quiz-loading {
-  display: none;
   position: absolute;
-  top: 30%;
-  left: 35%;
+  width: 100%;
 }
 
 @media only screen and (max-width: 1200px) {
