--- a/frontend/views/components/star.ejs
+++ b/frontend/views/components/star.ejs
@@ -3,7 +3,7 @@
   <path
     class="star1"
     d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z"
-    stroke="#ff5964"
+    stroke="#3a2ec0"
     stroke-width="1"
     fill="none"
   />
