--- a/frontend/public/css/character.css
+++ b/frontend/public/css/character.css
@@ -11,9 +11,9 @@
   grid-template-columns: 230px auto 230px;
 }
 
-#character-page h3 {
+#character-page h2 {
   color: var(--vita-yellow);
-  font-weight: bold;
+  font-family: var(--base-font-family);
 }
 
 /* *********************************** Grid items ******************************************* */
@@ -196,7 +196,7 @@ path {
     font-size: 2em;
   }
 
-  #character-page h3 {
+  #character-page h2 {
     font-size: 1em;
   }
 
