adds in default heading for accessibility purposes

--- a/frontend/views/quiz.ejs
+++ b/frontend/views/quiz.ejs
@@ -40,7 +40,7 @@ include('components/loading') %> <%- include('components/loading') %>
           alt="arrow pointing to the left"
         />
       </div>
-      <h1 id="question"></h1>
+      <h1 id="question">Question</h1>
       <div class="question">
         <img
           id="question-img"
