--- a/frontend/views/components/header.ejs
+++ b/frontend/views/components/header.ejs
@@ -52,7 +52,7 @@
           <li class="link home"><a href="/">home</a></li>
 
           <!-- Link to about -->
-          <li class="link about"><a href="/#about">about</a></li>
+          <li class="link about" onclick="closeDropdownMenu()"><a href="/#about">about</a></li>
 
           <!-- Link to quiz -->
           <li class="link quiz"><a href="/quiz">quiz</a></li>
