removed repeated code

--- a/frontend/views/components/header.ejs
+++ b/frontend/views/components/header.ejs
@@ -41,7 +41,7 @@
 
       <div>
         <!-- Menu icon -->
-        <div id="menu-icon" onclick="toggleHamburgerMenu(this)">
+        <div id="menu-icon" onclick="closeDropdownMenu()">
           <div class="bar1"></div>
           <div class="bar2"></div>
           <div class="bar3"></div>
@@ -52,7 +52,9 @@
           <li class="link home"><a href="/">home</a></li>
 
           <!-- Link to about -->
-          <li class="link about" onclick="closeDropdownMenu()"><a href="/#about">about</a></li>
+          <li class="link about" onclick="closeDropdownMenu()">
+            <a href="/#about">about</a>
+          </li>
 
           <!-- Link to quiz -->
           <li class="link quiz"><a href="/quiz">quiz</a></li>
